# tryharding-studies

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  prepare.md  suggestions.md
.claude/: settings.local.json
aux/: kind-config.yaml
content/: README.template  content.sln  status
content/001/: Makefile  README.md
content/002/: README.md  docker-compose.yaml
content/003/: README.md  docker-compose.yaml
content/004/: README.md  docker-compose.yaml
content/005/: README.md  docker-compose.yml  otel-collector-config.yaml
content/006/: README.md  builder-config.yaml  docker-compose.yaml  go.mod  go.sum
content/007/: README.md  docker-compose.yaml  explain.md
content/008/: BENCHMARK.md  README.md  benchmark.sh  docker-compose.yaml  prometheus-mitigated.yml
content/009/: README.md  bar.py  dispersao.py  distribuicao.py  linha.py  mapa.py  pizza.py  requirements.txt
content/010/: README.md  docker-compose.yaml
content/011/: README.md  network_exporter.yaml
content/012/: README.md  docker-compose.yaml  fake-requests.sh
content/013/: README.md  docker-compose.yaml  references.md
content/014/: README.md  docker-compose.yml  otel-collector-config.yaml  trace.json
content/015/: README.md  test_telemetry.py
content/016/: README.md  docker-compose.yaml
content/017/: README.md  docker-compose.yml  envoy.yaml  otel-collector-logs.yaml  otel-collector-metrics.yaml  (+3 more)
content/020/rust-axum/: Cargo.toml  Dockerfile
content/020/rust-axum/src/: main.rs
content/057/services/product/: Cargo.toml  Dockerfile  build.rs
content/057/services/product/src/: grpc_api.rs  http_api.rs  main.rs  repository.rs  service.rs  telemetry.rs
pocs/: README.template  status
pocs_drafts/: suggestions.md
scripts/: gen_index.py
(+1427 files in other folders)
