[package]
name = "rust-axum"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust-axum"
path = "src/main.rs"

[dependencies]
axum            = "0.7"
tokio           = { version = "1", features = ["full"] }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
tower-http      = { version = "0.5", features = ["trace"] }

# OpenTelemetry
opentelemetry                = { version = "0.22", features = ["trace", "metrics"] }
opentelemetry_sdk            = { version = "0.22", features = ["rt-tokio", "trace", "metrics"] }
opentelemetry-otlp           = { version = "0.15", features = ["tonic", "trace", "metrics", "grpc-tonic"] }
opentelemetry-semantic-conventions = "0.14"

# Tracing
tracing                  = "0.1"
tracing-opentelemetry    = "0.23"
tracing-subscriber       = { version = "0.3", features = ["env-filter", "registry"] }

[profile.release]
opt-level = 3
